# nonebot-plugin-ts3man

./: .gitignore  NOTICE  README.md  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
nonebot-plugin-ts3man/: __init__.py  config.py
nonebot-plugin-ts3man/ts3functions/: view_online_users.py
nonebot-plugin-ts3man/utils/: query.py  view_server.py
