[project]
name = "nonebot-plugin-ts3man"
version = "0.1.0"
description = "TS3 管理插件"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "colorama==0.4.6",
    "exceptiongroup==1.2.2",
    "idna==3.10",
    "loguru==0.7.3",
    "msgpack==1.1.0",
    "multidict==6.4.3",
    "nonebot-adapter-onebot==2.4.6",
    "nonebot2==2.4.2",
    "propcache==0.3.1",
    "pydantic==2.11.4",
    "pydantic-core==2.33.2",
    "pygtrie==2.5.0",
    "python-dotenv==1.1.0",
    "pyyaml==6.0.2",
    "sniffio==1.3.1",
    "ts3==1.0.11",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "win32-setctime==1.2.0",
    "yarl==1.20.0",
]
